--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Hi, I'm Destroyer:)</h1>
-	<button type="button" id="alertButton">Run</button>
-	<script src="alert.js"></script>
+	<button type="button" id="runButton">Run</button>
+	<script src="main.js"></script>
 </body>
 </html>
